// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toComponentModule default options 1`] = `
"/*---
title: Everything is ok
---*/
\\"use strict\\";
const React = require(\\"react\\");

const frontMatter = {
  title: \\"Everything is ok\\"
};

class MarkdownReact extends React.PureComponent {
  render() {
    const props = this.props;
    return (
      <div>
        <h1>{frontMatter.title}</h1>
        <p>And a <strong>special</strong> number: {props.number}.</p>
      </div>
    );
  }
}

module.exports = MarkdownReact;
"
`;

exports[`toComponentModule default options produce valid module 1`] = `
"<div>
    <h1>Everything is ok</h1>
    <p>And a <strong>special</strong> number: 77.</p>
</div>"
`;

exports[`toComponentModule default options with modules in front matter 1`] = `
"/*---
title: Everything is ok
modules:
  - \\"const Timer = require('./timer')\\"
  - \\"import { Watcher } from './watcher'\\"
---*/
\\"use strict\\";
const React = require(\\"react\\");
const Timer = require(\\"./timer\\");
import { Watcher } from \\"./watcher\\";

const frontMatter = {
  title: \\"Everything is ok\\"
};

class MarkdownReact extends React.PureComponent {
  render() {
    const props = this.props;
    return (
      <div>
        <h1>{frontMatter.title}</h1>
        <p>Some introductory text.</p>
        <Watcher />
        <p>This paragraph includes a <Timer />.</p>
      </div>
    );
  }
}

module.exports = MarkdownReact;
"
`;

exports[`toComponentModule documentation example, with wrapper front matter 1`] = `
"/*---
wrapper: '../wrapper'
modules:
  - \\"const Timer = require('./timer')\\"
  - \\"import { Watcher } from './watcher'\\"
title: Everything is ok
quantity: 834
---*/
\\"use strict\\";
const React = require(\\"react\\");
const Timer = require(\\"./timer\\");
import { Watcher } from \\"./watcher\\";
const Wrapper = require(\\"../wrapper\\");

const frontMatter = {
  title: \\"Everything is ok\\",
  quantity: 834
};

class MarkdownReact extends React.PureComponent {
  render() {
    const props = this.props;
    return (
      <Wrapper {...props} frontMatter={frontMatter}>
        <div>
          <h1>{frontMatter.title}</h1>
          <p>Some introductory text. The quantity is {frontMatter.quantity}</p>
          <Watcher />
          <p>This paragraph includes a <Timer />.</p>
          <p>This component also accepts a \\"foo\\" prop: {props.foo}</p>
        </div>
      </Wrapper>
    );
  }
}

module.exports = MarkdownReact;
"
`;

exports[`toComponentModule non-string primitives in front matter 1`] = `
"/*---
count: 7
isHonest: false
---*/
\\"use strict\\";
const React = require(\\"react\\");

const frontMatter = {
  count: 7,
  isHonest: false
};

class MarkdownReact extends React.PureComponent {
  render() {
    const props = this.props;
    return (
      <div>
        <p>count: {frontMatter.count}</p>
        <p>isHonest: {frontMatter.isHonest}</p>
      </div>
    );
  }
}

module.exports = MarkdownReact;
"
`;

exports[`toComponentModule options.modules 1`] = `
"/*---
title: Everything is ok
---*/
\\"use strict\\";
const React = require(\\"react\\");
import { Watcher } from \\"./watcher\\";

const frontMatter = {
  title: \\"Everything is ok\\"
};

class MarkdownReact extends React.PureComponent {
  render() {
    const props = this.props;
    return <Watcher />;
  }
}

module.exports = MarkdownReact;
"
`;

exports[`toComponentModule options.name 1`] = `
"\\"use strict\\";
const React = require(\\"react\\");

const frontMatter = {};

class MySpecialName extends React.PureComponent {
  render() {
    const props = this.props;
    return <h1>Title</h1>;
  }
}

module.exports = MySpecialName;
"
`;

exports[`toComponentModule options.template 1`] = `
"MarkdownReact
{\\"title\\":\\"Foo\\",\\"list\\":[\\"one\\",\\"two\\"]}
<h1>{frontMatter.title}</h1>
"
`;

exports[`toComponentModule options.wrapper 1`] = `
"<div>
    <div>This is the wrapper. Here are its props:</div>
    <div>77</div>
    <div>Everything is ok</div>
    <div>834</div>
    <div>
        <h1>Everything is ok</h1>
        <p>Some introductory text. The quantity is 834</p>
        <p>Here is a number: 77</p>
    </div>
</div>"
`;

exports[`toComponentModule toJsx options 1`] = `
"/*---
title: Foo
list:
  - one
  - two
---*/
\\"use strict\\";
const React = require(\\"react\\");

const frontMatter = {
  title: \\"Foo\\",
  list: [\\"one\\", \\"two\\"]
};

class MarkdownReact extends React.PureComponent {
  render() {
    const props = this.props;
    return (
      <div>
        <h1>{frontMatter.title}</h1>
        <div className=\\"foo\\">
          <p>The default {\\"{\\"}{\\"{\\"} delimiter {\\"}\\"}{\\"}\\"} is ignored.</p>
        </div>
        <pre><code className=\\"language-js\\">var x = 3;{\\"\\\\n\\"}</code></pre>
      </div>
    );
  }
}

module.exports = MarkdownReact;
"
`;
